policies/gatekeeper/templates/k8srequiredresourcelimits-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresourcelimits

        containers[container] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          input.review.kind.kind == "CronJob"
          container := input.review.object.spec.jobTemplate.spec.template.spec.containers[_]
        }

        containers[container] {
          input.review.kind.kind != "Pod"
          input.review.kind.kind != "CronJob"
          container := input.review.object.spec.template.spec.containers[_]
        }

        containers[container] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.initContainers[_]
        }

        containers[container] {
          input.review.kind.kind == "CronJob"
          container := input.review.object.spec.jobTemplate.spec.template.spec.initContainers[_]
        }

        containers[container] {
          input.review.kind.kind != "Pod"
          input.review.kind.kind != "CronJob"
          container := input.review.object.spec.template.spec.initContainers[_]
        }

        containers[container] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.ephemeralContainers[_]
        }

        containers[container] {
          input.review.kind.kind == "CronJob"
          container := input.review.object.spec.jobTemplate.spec.template.spec.ephemeralContainers[_]
        }

        containers[container] {
          input.review.kind.kind != "Pod"
          input.review.kind.kind != "CronJob"
          container := input.review.object.spec.template.spec.ephemeralContainers[_]
        }

        violation[{"msg": msg}] {
          container := containers[_]
          not container.resources.limits.cpu
          msg := sprintf("container %q must define resources.limits.cpu", [container.name])
        }

        violation[{"msg": msg}] {
          container := containers[_]
          not container.resources.limits.memory
          msg := sprintf("container %q must define resources.limits.memory", [container.name])
        }
